fixed NaN bug, atm working. Need to add logic for trying to take out too much money when withdrawing

--- a/atm.css
+++ b/atm.css
@@ -6,6 +6,12 @@ body {
   margin: 0px auto;
   text-align: center;
   width: 700px;
+  background-image: url("https://www.colourbox.com/preview/2120061-background-with-the-hundred-dollar-bank-notes.jpg");
+}
+
+img {
+  height: 150px;
+  width: 150px;
 }
 
 .header {
